# marketing-analyst

./: .dockerignore  .gcloudignore  .gitignore  Dockerfile  Dockerfile.frontend  README.md  agent.py  app.py  check-pulse.py  deploy.sh  linkedin_tracker.py  main.py  memory.json  monitor.py  pyproject.toml  requirements.txt  run.sh  server.py  simple_server.py  utils.py
.scannerwork/: report-task.txt
.streamlit/: config.toml
tests/: test_monitor.py
